Add stories section of natours

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -238,6 +238,73 @@
           <a href="#" class="btn btn--green">Discover All Tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__img"
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+              />
+              <figcaption class="story__caption">Lizbeth Kaley</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Dolore, temporibus non amet excepturi iusto voluptatem pariatur
+                aliquam ab recusandae minus, laboriosam, aspernatur velit beatae
+                nesciunt blanditiis! Quod expedita soluta fuga. Dignissimos
+                debitis nulla laborum odio? Odio vitae placeat dolor voluptatum.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__img"
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+              />
+              <figcaption class="story__caption">Ernie Kasey</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is compeletely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere
+                vero ipsa enim veritatis molestias optio ab temporibus, tempora
+                id accusamus rerum quaerat incidunt soluta mollitia consectetur
+                repudiandae tempore, quisquam vel ex rem. Ratione et, nihil nemo
+                maiores quos earum?
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read All Stories &rarr;</a>
+        </div>
+      </section>
     </main>
     <!--
       <section class="grid-test">
