--- a/Natours/index.html
+++ b/Natours/index.html
@@ -16,6 +16,8 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <!-- Header -->
+
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -32,6 +34,8 @@
     </header>
 
     <main>
+      <!-- About Section -->
+
       <section class="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
@@ -82,6 +86,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Features Section -->
 
       <section class="section-features">
         <div class="row">
@@ -135,6 +141,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Tours Section -->
 
       <section class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
@@ -239,6 +247,8 @@
         </div>
       </section>
 
+      <!-- Stories Section -->
+
       <section class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
@@ -303,6 +313,74 @@
 
         <div class="u-center-text u-margin-top-huge">
           <a href="#" class="btn-text">Read All Stories &rarr;</a>
+        </div>
+      </section>
+
+      <!-- Booking Section -->
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">Start booking now</h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    id="name"
+                    placeholder="Full Name"
+                    required
+                  />
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="email"
+                    class="form__input"
+                    id="email"
+                    placeholder="Email address"
+                    required
+                  />
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="size"
+                    />
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group</label
+                    >
+                  </div>
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="size"
+                    />
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Large tour group</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form__group">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </section>
     </main>
