--- a/Natours/index.html
+++ b/Natours/index.html
@@ -16,6 +16,45 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <!-- Navigation -->
+
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#about" class="navigation__link"
+              ><span>01</span>About Natours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#features" class="navigation__link"
+              ><span>02</span>Your benefits</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#tours" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#stories" class="navigation__link"
+              ><span>04</span>Stories</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#book" class="navigation__link"><span>05</span>Books</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <!-- Header -->
 
     <header class="header">
@@ -36,7 +75,7 @@
     <main>
       <!-- About Section -->
 
-      <section class="section-about">
+      <section id="about" class="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
@@ -89,7 +128,7 @@
 
       <!-- Features Section -->
 
-      <section class="section-features">
+      <section id="features" class="section-features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -144,7 +183,7 @@
 
       <!-- Tours Section -->
 
-      <section class="section-tours">
+      <section id="tours" class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -249,7 +288,7 @@
 
       <!-- Stories Section -->
 
-      <section class="section-stories">
+      <section id="stories" class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="img/video.mp4" type="video/mp4" />
@@ -318,7 +357,7 @@
 
       <!-- Booking Section -->
 
-      <section class="section-book">
+      <section id="book" class="section-book">
         <div class="row">
           <div class="book">
             <div class="book__form">
