Add popup to natours

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -68,7 +68,9 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#tours" class="btn btn--white btn--animated"
+          >Discover our tours</a
+        >
       </div>
     </header>
 
@@ -214,7 +216,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$299</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#popup" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -244,7 +246,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$499</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#popup" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -274,7 +276,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$899</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#popup" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -282,7 +284,7 @@
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn btn--green">Discover All Tours</a>
+          <a href="#tours" class="btn btn--green">Discover All Tours</a>
         </div>
       </section>
 
@@ -461,6 +463,39 @@
         </div>
       </div>
     </footer>
+
+    <!-- Popup -->
+
+    <div id="popup" class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+            cumque, at incidunt accusamus, labore, natus magnam ea deserunt
+            porro sunt quos dignissimos error assumenda voluptatem iusto.
+            Consectetur quisquam odit veritatis pariatur mollitia deleniti. Unde
+            quaerat porro dolorem expedita distinctio dolorum necessitatibus.
+            Quas, cum expedita vel nisi odio soluta unde, necessitatibus
+            obcaecati voluptate dolore illo temporibus. Lorem ipsum, dolor sit
+            amet consectetur adipisicing elit. Quidem, consequatur esse. A
+            aliquid necessitatibus quod, repellendus autem similique
+            voluptatibus pariatur.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
     <!--
       <section class="grid-test">
         <div class="row">
