--- a/Trillo/index.html
+++ b/Trillo/index.html
@@ -213,7 +213,47 @@
               </div>
             </div>
 
-            <div class="user-reviews">User reviews</div>
+            <div class="user-reviews">
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Optio iste, aliquid placeat animi quasi consequuntur.
+                </blockquote>
+                <figcaption class="review__user">
+                  <img
+                    src="img/user-5.jpg"
+                    alt="User 1"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Oded Reagan</p>
+                    <p class="review__user-date">Apr 11, 2021</p>
+                  </div>
+                  <div class="review__rating">8.1</div>
+                </figcaption>
+              </figure>
+
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Minima aspernatur magni sit excepturi atque dolore dicta.
+                </blockquote>
+                <figcaption class="review__user">
+                  <img
+                    src="img/user-6.jpg"
+                    alt="User 1"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Zinon Fumihito</p>
+                    <p class="review__user-date">Jan 22, 2021</p>
+                  </div>
+                  <div class="review__rating">9.2</div>
+                </figcaption>
+              </figure>
+
+              <button class="btn-inline">Show all <span>&rarr;</span></button>
+            </div>
           </div>
         </main>
       </div>
